unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Birth Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>