unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/CanStorePiiElsewhere__c.field-meta.xml
<CustomField>
    <fullName>CanStorePiiElsewhere__c</fullName>
    <label>OK to Store PII Data Elsewhere</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>