unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/ChildrenCount__c.field-meta.xml
<CustomField>
    <fullName>ChildrenCount__c</fullName>
    <label>Number of Children</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>