unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/ConsumerCreditScore__c.field-meta.xml
<CustomField>
    <fullName>ConsumerCreditScore__c</fullName>
    <label>Consumer Credit Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>