unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/ConsumerCreditScoreProviderName__c.field-meta.xml
<CustomField>
    <fullName>ConsumerCreditScoreProviderName__c</fullName>
    <label>Consumer Credit Score Provider Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>