unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/DataSourceObject__c.field-meta.xml
<CustomField>
    <fullName>DataSourceObject__c</fullName>
    <label>Data Source Object</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>