unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/DeathDate__c.field-meta.xml
<CustomField>
    <fullName>DeathDate__c</fullName>
    <label>Death Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>