unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/HasOptedOutProcessing__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutProcessing__c</fullName>
    <label>Don&#39;t Process</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>