unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/HasOptedOutProfiling__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutProfiling__c</fullName>
    <label>Don&#39;t Profile</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>