unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/IndividualsAge__c.field-meta.xml
<CustomField>
    <fullName>IndividualsAge__c</fullName>
    <label>Individual&#39;s Age</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>