unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/InfluencerRating__c.field-meta.xml
<CustomField>
    <fullName>InfluencerRating__c</fullName>
    <label>Influencer Rating</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>