unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/MilitaryService__c.field-meta.xml
<CustomField>
    <fullName>MilitaryService__c</fullName>
    <label>Military Service</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>