unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/SendIndividualData__c.field-meta.xml
<CustomField>
    <fullName>SendIndividualData__c</fullName>
    <label>Export Individual&#39;s Data</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>