unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/SfdcOrganizationId__c.field-meta.xml
<CustomField>
    <fullName>SfdcOrganizationId__c</fullName>
    <label>SfdcOrganizationId</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>