unpackaged/main/default/objects/individual_pouyasource2__dlm/fields/ShouldForget__c.field-meta.xml
<CustomField>
    <fullName>ShouldForget__c</fullName>
    <label>Forget this Individual</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>